Prøver stadig at få en næste side til at dukke op

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <body>
     <script src="sketch.js"></script>
     <script src="text.js"></script>
+    <script src="2dieThrow1.js"></script>
   </body>
 </html>
