scenes are working now and added scene 2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script src="1Intro.js"></script>
     <script src="text.js"></script>
-    <script src="2dieThrow1.js"></script>
+    <script src="2DieThrow1.js"></script>
   </body>
 </html>
