--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
   <body>
     <script src="sketch.js"></script>
-    <script src="1Intro.js"></script>
     <script src="text.js"></script>
+    <script src="sounds.js"></script>
+    <script src="1Intro.js"></script>
     <script src="2DieThrow1.js"></script>
   </body>
 </html>
