organizing in folders

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
   <body>
     <script src="sketch.js"></script>
-    <script src="text.js"></script>
-    <script src="sounds.js"></script>
-    <script src="1Intro.js"></script>
-    <script src="2DieThrow1.js"></script>
+    <script src="data/text.js"></script>
+    <script src="data/sounds.js"></script>
+    <script src="scenes/1Intro.js"></script>
+    <script src="scenes/2DieThrow1.js"></script>
   </body>
 </html>
