writing privilege to variable

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="sketch.js"></script>
   <script src="data/text.js"></script>
   <script src="data/sounds.js"></script>
+  <script src="data/modifiers.js"></script>
   <script src="scenes/1Intro.js"></script>
   <script src="scenes/2DieThrow1.js"></script>
 </body>
