--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="data/modifiers.js"></script>
   <script src="scenes/1Intro.js"></script>
   <script src="scenes/2DieThrow1.js"></script>
+  <script src="scenes/3BadNews.js"></script>
 </body>
 
 </html>
